--- a/.README.adoc
+++ b/.README.adoc
@@ -1,4 +1,4 @@
-# asciidoctor-remote-include-processor
+= asciidoctor-remote-include-processor
 
 Remote include processor extension for asciidoctor
 
