--- a/docs/modules/ROOT/pages/index.adoc
+++ b/docs/modules/ROOT/pages/index.adoc
@@ -29,12 +29,15 @@ asciidoc:
 
 In an Antora adoc page, include a remote file
 
-```adoc
+++++
+<pre><code class="language-cpp">
 [source,cpp]
 ----
 include::https://raw.githubusercontent.com/feelpp/asciidoctor-remote-include-processor/master/test/helloworld.cpp[]
 ----
-```
+</code>
+</pre>
+++++
 
 which gives:
 
@@ -48,12 +51,16 @@ include::https://raw.githubusercontent.com/feelpp/asciidoctor-remote-include-pro
 In Asciidoctor we can include a source file partially using tags, see https://asciidoctor.org/docs/user-manual/#by-tagged-regions[here]. 
 The extension enable this very feature.
 
-```adoc
+++++
+<pre>
+<code class="language-cpp">
 [source,cpp]
 ----
 include::https://raw.githubusercontent.com/feelpp/asciidoctor-remote-include-processor/master/test/helloworld.cpp[tag=hello]
 ----
-``` 
+</code>
+</pre>
+++++
 
 which gives:
 
