--- a/docs/modules/ROOT/pages/index.adoc
+++ b/docs/modules/ROOT/pages/index.adoc
@@ -51,7 +51,7 @@ include::https://raw.githubusercontent.com/feelpp/asciidoctor-remote-include-pro
 === Include a remote file partially using tags
 
 In Asciidoctor we can include a source file partially using tags, see https://asciidoctor.org/docs/user-manual/#by-tagged-regions[here]. 
-The extension enable this very feature.
+The extension enables this very feature.
 
 ++++
 <pre>
@@ -69,6 +69,29 @@ which gives:
 [source,cpp]
 ----
 include::https://raw.githubusercontent.com/feelpp/asciidoctor-remote-include-processor/master/test/helloworld.cpp[tag=hello]
+----
+
+=== Include a remote file partially using line ranges
+
+In Asciidoctor we can include a source file partially using line ranges, see https://asciidoctor.org/docs/user-manual/#by-line-ranges[here]. 
+The extension enables this very feature.
+
+++++
+<pre>
+<code class="language-cpp">
+[source,cpp]
+----
+include::https://raw.githubusercontent.com/feelpp/asciidoctor-remote-include-processor/master/test/helloworld.cpp[lines=3..8]
+----
+</code>
+</pre>
+++++
+
+which gives:‡
+
+[source,cpp]
+----
+include::https://raw.githubusercontent.com/feelpp/asciidoctor-remote-include-processor/master/test/helloworld.cpp[lines=3..8]
 ----
 
 == Acknowledgments
