--- a/docs/modules/ROOT/pages/index.adoc
+++ b/docs/modules/ROOT/pages/index.adoc
@@ -71,28 +71,28 @@ which gives:
 include::https://raw.githubusercontent.com/feelpp/asciidoctor-remote-include-processor/master/test/helloworld.cpp[tag=hello]
 ----
 
-=== Include a remote file partially using line ranges
-
-In Asciidoctor we can include a source file partially using line ranges, see https://asciidoctor.org/docs/user-manual/#by-line-ranges[here]. 
-The extension enables this very feature.
-
-++++
-<pre>
-<code class="language-cpp">
-[source,cpp]
-----
-include::https://raw.githubusercontent.com/feelpp/asciidoctor-remote-include-processor/master/test/helloworld.cpp[lines=3..8]
-----
-</code>
-</pre>
-++++
-
-which gives:‡
-
-[source,cpp]
-----
-include::https://raw.githubusercontent.com/feelpp/asciidoctor-remote-include-processor/master/test/helloworld.cpp[lines=3..8]
-----
+// === Include a remote file partially using line ranges
+// 
+// In Asciidoctor we can include a source file partially using line ranges, see https://asciidoctor.org/docs/user-manual/#by-line-ranges[here]. 
+// The extension enables this very feature.
+// 
+// ++++
+// <pre>
+// <code class="language-cpp">
+// [source,cpp]
+// ----
+// include::https://raw.githubusercontent.com/feelpp/asciidoctor-remote-include-processor/master/test/helloworld.cpp[lines=3..8]
+// ----
+// </code>
+// </pre>
+// ++++
+// 
+// which gives:‡
+// 
+// [source,cpp]
+// ----
+// include::https://raw.githubusercontent.com/feelpp/asciidoctor-remote-include-processor/master/test/helloworld.cpp[lines=3..8]
+// ----
 
 == Acknowledgments
 
